--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:text="@string/title"
         android:textColor="@color/purple_500"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
         android:text="TextView" />
 
     <LinearLayout
